# auto-improvement-orchestrator-skill

./: .gitignore  README.md  SKILL.md  TEST.md  benchmarks.db  pyproject.toml
.github/workflows/: ci.yml
docs/: article-skill-improvement-pipeline.md  auto-improvement-orchestrator-design-2026-03-31.md  auto-improvement-orchestrator-skill-review-2026-04-01.md  release-readiness-2026-04-02.md
docs/design/: user-feedback-loop.md
lib/: common.py  pareto.py  state_machine.py
references/: architecture.md  end-to-end-demo.md
scripts/: apply_gate.py  evaluator_phase1.py  lane_common.py  rollback.py  run_critic.py
scripts/human_review/: pr_review_trigger.py
skills/auto-improvement-orchestrator/: SKILL.md
skills/autoloop-controller/: SKILL.md
skills/benchmark-store/: SKILL.md
skills/benchmark-store.backup.20260402T121427Z/: SKILL.md
skills/deslop/: SKILL.md
skills/execution-harness/: README.md  SKILL.md
skills/improvement-discriminator/: SKILL.md
skills/improvement-discriminator.backup.20260402T121420Z/: SKILL.md
skills/improvement-evaluator/: README.md  SKILL.md
skills/improvement-executor/: SKILL.md
skills/improvement-executor.backup.20260402T121423Z/: SKILL.md
skills/improvement-gate/: SKILL.md
skills/improvement-gate.backup.20260402T121425Z/: SKILL.md
skills/improvement-generator/: SKILL.md
skills/improvement-generator.backup.20260402T121418Z/: SKILL.md
skills/improvement-learner/: SKILL.md
skills/improvement-learner.backup.20260402T121442Z/: SKILL.md
skills/improvement-orchestrator/: SKILL.md
skills/prompt-hardening/: SKILL.md
(+92 files in other folders)
